# AlkalosProject

./: .env.example  .gitignore  README.md  backtest.py  backtest_cli.py  backtester.py  coinbase_client.py  data_utils.py  debug_train_shapes.py  feature_engineering.py  inspect_csv.py  install_env.ps1  label_csv.py  make.ps1  master.bat  master.ps1  models.py  optimize.ps1  optimize_params.py  paper_bot.py  pyproject.toml  requirements.txt  risk_utils.py  sanity_e2e.ps1  settings.json  signal_strategy.py  trading_bot.py
alkalos/: data.py  engine.py  strategy.py
alkalos.egg-info/: PKG-INFO  SOURCES.txt
configs/: BTC_USDT_1d.yaml  settings.py
data/: BTC_USDT_1d.csv  BTC_USD_1d.csv  BTC_USD_1d_labeled.csv  ETH_USDT_1d.csv  ETH_USD_1d.csv
models/: BTC_lgbm.pkl  BTC_logreg.pkl  ETH_logreg.pkl
reports/: BTC_equity.csv  BTC_equity_enhanced.csv  BTC_summary.json  BTC_summary_enhanced.json  BTC_test_summary.json  BTC_test_trades.csv  BTC_trades.csv  BTC_trades_enhanced.csv  ETH_equity.csv  ETH_equity_enhanced.csv  ETH_summary.json  ETH_summary_enhanced.json  ETH_trades.csv  ETH_trades_enhanced.csv  MASTER_SUMMARY_20250810-192325.md  MASTER_SUMMARY_20250810-194737.md  comparison_default_optimized_portfolio.csv  opt_enhanced_BTC_20250810-194736.csv  opt_enhanced_BTC_20250810-194952.csv  opt_enhanced_best_BTC_20250810-194736.json  opt_enhanced_best_BTC_20250810-194952.json  portfolio_equity.csv  train_summary_BTC.json  train_summary_ETH.json
src/: data_fetch.py
tests/: conftest.py  test_backtest_full.py  test_build_features.py  test_dataset_no_lookahead.py  (+12 more)
(+39 files in other folders)
